# open-insurance-portfolio-os

./: .gitignore  README.md
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.supabase.yml  docker-compose.yml  pyproject.toml  test_document.py  test_full_pipeline.py  test_pipeline.py
backend/app/: __init__.py  main.py
backend/app/cli/: ingest.py
backend/app/core/: __init__.py  config.py  database.py  dependencies.py  gap_thresholds.py
backend/app/models/: __init__.py  base.py  building.py  carrier.py  certificate.py  claim.py  conversation.py  coverage.py  coverage_conflict.py  coverage_gap.py  document.py  document_chunk.py  endorsement.py  extracted_fact.py  financial.py  health_score.py  insurance_program.py  insured_entity.py  lender.py  lender_requirement.py  market_context.py  message.py  organization.py  policy.py  property.py  renewal_alert.py  renewal_forecast.py  renewal_readiness.py  valuation.py
backend/app/repositories/: __init__.py  base.py  certificate_repository.py  claim_repository.py  conflict_repository.py  conversation_repository.py  document_chunk_repository.py  document_repository.py  financial_repository.py  gap_repository.py  health_score_repository.py  policy_repository.py  program_repository.py  property_repository.py  valuation_repository.py
backend/app/schemas/: __init__.py  acquisitions.py  claim.py  common.py  completeness.py  conflict.py  dashboard.py  document.py  enrichment.py  gap.py  health_score.py  policy.py  property.py  renewal.py
backend/app/services/: __init__.py  acquisitions_llm_service.py  acquisitions_service.py  answer_generation_service.py  carrier_research_service.py  chunking_service.py  classification_service.py  completeness_service.py  compliance_service.py  conflict_detection_service.py  dashboard_service.py  ocr_service.py  (+21 more)
backend/migrations/: 001_initial_schema.sql  001_initial_schema_rollback.sql  002_align_extraction_schema.sql  002_conversations.sql  003_renewal_intelligence.sql  003_renewal_intelligence_rollback.sql
backend/scripts/: test_storage.py
backend/tests/: conftest.py  test_compliance.py  test_extraction_enhancements.py  test_gap_detection.py  test_health.py  test_phase_4_3.py  test_rag_services.py
(+250 files in other folders)
